tests/ui/asm/non-const.stderr
error[E0015]: cannot call non-const function `non_const_fn` in constants
  --> $DIR/non-const.rs:10:31
   |
LL | global_asm!("/* {} */", const non_const_fn(0));
   |                               ^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
